feat(editor): add custom cursor.

--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -159,6 +159,8 @@
   --muted: oklch(0.553 0.013 58.071);
   --muted-light: #222831;
   --muted-dark: #eeeeee;
+
+  cursor: url("/assets/icons/navigation.png"), auto;
 }
 
 .wrapper {
@@ -169,6 +171,13 @@
 body {
   color: var(--text-primary);
   background: var(--background-100);
+}
+
+a,
+button,
+optgroup,
+select {
+  cursor: url("/assets/icons/tap.png"), pointer;
 }
 
 /* Keywords */
